--- a/w2/index.html
+++ b/w2/index.html
@@ -9,6 +9,49 @@
     <link rel="stylesheet" href="main.css" type="text/css">
 </head>
 <body>
+    <h1>Why am I taking this course?</h1>
+
+    <hr>
+
+    <nav>
+        <ul>
+            <li>
+                <a href="goals.html">Goals</a>
+            </li>
+            <li>
+                <a href="learn-more.html">Learn-more</a>
+            </li>
+        </ul>
+    </nav>
     
+    <hr>
+
+    <section id="html">
+        <h2>Why learning HTML is a good idea:</h2>
+        <p>I believe that learning HTML is a good idea because you can build your own websites. You have to know the basics in HTML to create a functioning website. HTML is the foundation for a functioning website.</p>
+    </section>
+
+    <hr>
+
+    <section id="websites">
+        <h2>Websites I visit often:</h2>
+        <ul>
+            <li>
+                <p><a href="https://www.youtube.com/">Youtube</a></p>
+            </li>
+            <li>
+                <p><a href="https://store.steampowered.com/">Steam</a></p>
+            </li>
+            <li>
+                <p><a href="https://www.amazon.com/">Amazon</a></p>
+            </li>
+        </ul>
+    </section>
+
+    <hr>
+    &lt;&lt;&lt; &copy; Brendan Fahey &gt;&gt;&gt;
+    <p>
+        <a href="#">Back to Top</a>
+      </p>
 </body>
 </html>
