updated back to home page for goals and learn-more pages

--- a/w2/index.html
+++ b/w2/index.html
@@ -53,7 +53,7 @@
     <section id="websites">
         <h2>Websites I visit often:</h2>
         <figure>  
-        <img src="img/Legend of Zelda_Link_530x530.png" alt="Legend of Zelda_Link" title="Go On and Click a Link" width="400" height="400">
+        <img src="img/LegendofZelda_Link_530x530.png" alt="Legend of Zelda_Link" title="Go On and Click a Link" width="400" height="400">
         <figcaption>Go On and Click a Link</figcaption>
         </figure>
         <ul>
