--- a/w2/goals.html
+++ b/w2/goals.html
@@ -46,7 +46,7 @@
 
     &lt;&lt;&lt; &copy; Brendan Fahey &gt;&gt;&gt;
     
-    <p><a href="/">Back to Home</a></p>
+    <p><a href="index.html">Back to Home</a></p>
 
     <p><a href="https://github.com/CIT85">Github Organization CIT 85</a></p>
 </body>
