--- a/w2/learn-more.html
+++ b/w2/learn-more.html
@@ -52,7 +52,7 @@
     <hr>
     &lt;&lt;&lt; &copy; Brendan Fahey &gt;&gt;&gt;
     
-    <p><a href="/">Back to Home</a></p>
+    <p><a href="index.html">Back to Home</a></p>
 
     <p><a href="https://github.com/CIT85">Github Organization CIT 85</a></p>
 </body>
