updates to links

--- a/w2/goals.html
+++ b/w2/goals.html
@@ -48,6 +48,6 @@
     
     <p><a href="index.html">Back to Home</a></p>
 
-    <p><a href="https://github.com/CIT85">Github Organization CIT 85</a></p>
+    <p><a href="https://github.com/CIT85" target="_blank">Github Organization CIT 85</a></p>
 </body>
 </html>
