--- a/w2/index.html
+++ b/w2/index.html
@@ -58,13 +58,13 @@
         </figure>
         <ul>
             <li>
-                <p><a href="https://www.youtube.com/">Youtube</a></p>
+                <p><a href="https://www.youtube.com/" target="_blank">Youtube</a></p>
             </li>
             <li>
-                <p><a href="https://store.steampowered.com/">Steam</a></p>
+                <p><a href="https://store.steampowered.com/" target="_blank">Steam</a></p>
             </li>
             <li>
-                <p><a href="https://www.amazon.com/">Amazon</a></p>
+                <p><a href="https://www.amazon.com/" target="_blank">Amazon</a></p>
             </li>
         </ul>
     </section>
@@ -74,6 +74,6 @@
     
     <p><a href="#">Back to Top</a></p>
 
-    <p><a href="https://github.com/CIT85">Github Organization CIT 85</a></p>
+    <p><a href="https://github.com/CIT85" target="_blank">Github Organization CIT 85</a></p>
 </body>
 </html>
