--- a/w2/learn-more.html
+++ b/w2/learn-more.html
@@ -32,17 +32,17 @@
         <h2>HTML Tags Listed from W3 Schools:</h2>
         <ul>
             <li>
-                <p><a href="https://www.w3schools.com/tags/tag_object.asp">Object</a></p>
+                <p><a href="https://www.w3schools.com/tags/tag_object.asp" target="_blank">Object</a></p>
                 <p>"<em>This tag defines a container for an external resource. The external resource can be a web page, a picture, a media player, or a plug-in application.</em>"</p>
                 <p>I want to learn how include or embed a video into a website.</p>
             </li>
             <li>
-                <p><a href="https://www.w3schools.com/tags/tag_area.asp">Area</a></p>
+                <p><a href="https://www.w3schools.com/tags/tag_area.asp" target="_blank">Area</a></p>
                 <p>"<em>This tag defines an area inside an image map (an image map is an image with clickable areas). This element is always nested inside a 'map' tag.</em>"</p>
                 <p>I want to learn how map web apps like Google Maps function.</p>
             </li>
             <li>
-                <p><a href="https://www.w3schools.com/tags/tag_base.asp">Base</a></p>
+                <p><a href="https://www.w3schools.com/tags/tag_base.asp" target="_blank">Base</a></p>
                 <p>"<em>This tag specifies the base URL and/or target for all relative URLs in a document. This tag must have either an 'href' or a target attribute present, or both. There can only be one single 'base' element in a document, and it must be inside the 'head' element.</em>"</p>
                 <p>I have not used the 'base' tag yet. It would be good to learn how it functions.</p>
             </li>
@@ -54,6 +54,6 @@
     
     <p><a href="index.html">Back to Home</a></p>
 
-    <p><a href="https://github.com/CIT85">Github Organization CIT 85</a></p>
+    <p><a href="https://github.com/CIT85" target="_blank">Github Organization CIT 85</a></p>
 </body>
 </html>
