updated metadata, started contact page

--- a/final/postgresql.html
+++ b/final/postgresql.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="PostgreSQL">
+    <meta name="keywords" content="PostgreSQL Database">
     <meta name="author" content="Brendan Fahey">
-    <meta name="description" content="Structured Query Language (SQL)">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PostgreSQL</title>
     <link rel="icon" href="sql-icon.png" type="image/x-icon">
@@ -254,7 +255,8 @@
             <address>
                 Content written by <a href="https://chat.openai.com/c/d5ab2f28-9a2e-404c-850c-7028d3bb339a" target="_blank">ChatGPT 3.5</a>
             </address>
-            <a href="site.html">sitemap</a>
+            <a href="site.html">sitemap</a><br>
+            <a href="contact.html">contact</a>
     </footer>
 </body>
 </html>
