--- a/final/site.html
+++ b/final/site.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Sitemap">
+    <meta name="keywords" content="site links and color palette">
     <meta name="author" content="Brendan Fahey">
-    <meta name="description" content="Structured Query Language (SQL)">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Structured Query Language (SQL)</title>
+    <title>Sitemap</title>
     <link rel="icon" href="sql-icon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
@@ -44,14 +45,18 @@
         <br>
         <section aria-label="site-map" id="site-map">
             <h2>Site Map</h2><br>
+            <p>These are the main pages below:</p><br>
             <a href="index.html"><h3>home</h3></a><br>
             <a href="database-management.html"><h3>database-management</h3></a><br>
             <a href="learning-sql.html"><h3>learning-sql</h3></a><br>
             <a href="career.html"><h3>career</h3></a><br>
+            <p>These are the subpages and where to find them:</p><br>
             <p>A subpage for the database PostgreSQL was created and placed under the <a href="database-management.html">database-management</a> main page and <a href="index.html">home</a> page. Please visit the Database Management page or click on the link below:</p><br>
             <a href="postgresql.html" target="_blank"><h3>PostgreSQL</h3></a><br>
             <p>A subpage for the database MySQL was created and placed under the <a href="database-management.html">database-management</a> main page and <a href="index.html">home</a> page. Please visit the Database Management page or click on the link below:</p><br>
             <a href="mysql.html" target="_blank"><h3>MySQL</h3></a><br>
+            <p>A page about the me, the author and a contact form to reach out to me. Click on the link below:</p><br>
+            <a href="contact.html"><h3>Contact</h3></a><br>
         </section>
     </main>
         <br>
@@ -84,7 +89,8 @@
             <address>
                 Content written by <a href="https://chat.openai.com/c/d5ab2f28-9a2e-404c-850c-7028d3bb339a" target="_blank">ChatGPT 3.5</a>
             </address>
-            <a href="site.html">sitemap</a>
+            <a href="site.html">sitemap</a><br>
+            <a href="contact.html">contact</a>
     </footer>
 </body>
 </html>
