--- a/final/contact.html
+++ b/final/contact.html
@@ -27,12 +27,48 @@
     </header>
     <br>
     <main class="main">
-        <section aria-label="form" id="form">
-
+        <section aria-label="about-me" id="about-me">
+            <h2>About Me:</h2><br>
+            <p>My name is Brendan Fahey. I am a Fresno City College student pursuing the Web Developer certificate under the Computer Information Technology program. I currently work in an IT Asset Management and Procurement role for the State of California. I am hoping to move into a Database Administrator position in the future. This is why my site is on the topic of SQL. I just completed a SQL course (CIT 28) for this Fall 2023 semester at Fresno City College, which was focused on teaching PostgreSQL. My current employer uses Microsoft SQL Server, which will require me to learn the Transact-SQL language next. My SQL website was a lot of fun to make and I learned some more about SQL in the process. </p><br>
+            <p>ChatGPT 3.5 was very helpful in providing the information on SQL for this site. The Microsoft DALL-E 3 Image Creator using Bing.com created AI art as images provided in this site. Links for these tools are provided in the sidebar. They are both useful tools that can help you with your next project.</p><br>
+            <p>Thank you for visiting my website. I hope you had an good experience and may be learned a thing or two about SQL in the process. Please tell me what you think about my website in the contact form below. Thank you for time!</p>
         </section>
         <br>
-        <section aria-label="about-me" id="about-me">
-
+        <section aria-label="form" id="form">
+            <h2>Contact Me</h2><br>
+            <p>I'd really like to hear your feedback!</p><br>
+            <form action="https://httpbin.org/get" method="get">
+                <fieldset class="contact">
+                    <legend>Personal Info</legend>
+                <p>
+                    <label for="firstName">First Name:</label>
+                    <input type="text" name="firstName" id="firstName" placeholder="John" autocomplete="on" required>
+                </p>
+                <p>
+                    <label for="lastName">Last Name:</label>
+                    <input type="text" name="lastName" id="lastName" placeholder="Doe" autocomplete="on" required>
+                </p>
+                <p>
+                    <label for="phoneNumber">Phone:</label>
+                    <input type="tel" name="phoneNumber" id="phoneNumber" placeholder="5555555555" pattern="[0-9]{3}[0-9]{3}[0-9]{4}" autocomplete="on" required>
+                </p>
+                <p>
+                    <label for="email">Email Address:</label>
+                    <input type="email" name="email" id="email" placeholder="Email" autocomplete="on" required >
+                </p>  
+                </fieldset>
+                <br>
+                <fieldset>
+                    <legend>What Do You Think About My Site?</legend>
+                    <label for="message">Your Input:</label>
+                    <br>
+                    <textarea name="message" id="message" cols="30" rows="10" placeholder="Type your message here"></textarea>
+                </fieldset>
+                    <br>
+                    <button type="submit">Submit</button>
+                    <button type="submit" formaction="https://httpbin.org/post" formmethod="post">Post</button>
+                    <button type="reset">Reset</button>
+            </form>
         </section>
     </main>
         <br>
